[gd_scene load_steps=20 format=3 uid="uid://dbyvbltpv5wb1"]

[ext_resource type="Script" uid="uid://crabbkk10blfl" path="res://Scripts/save_point.gd" id="1_5hgds"]
[ext_resource type="Texture2D" uid="uid://cemyodcct08ne" path="res://Textures/SavePoint/SavePointIdle.png" id="2_80wo7"]
[ext_resource type="Texture2D" uid="uid://bq7fq4jaikgyq" path="res://Textures/SavePoint/Save.png" id="3_vumj4"]
[ext_resource type="AudioStream" uid="uid://clt3on0a2r63p" path="res://SoundEffects/souSave.wav" id="4_80wo7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c2vm6"]
atlas = ExtResource("2_80wo7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iadg7"]
atlas = ExtResource("2_80wo7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqg3q"]
atlas = ExtResource("2_80wo7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ari52"]
atlas = ExtResource("2_80wo7")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vx20w"]
atlas = ExtResource("2_80wo7")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xkxh"]
atlas = ExtResource("2_80wo7")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ey1ld"]
atlas = ExtResource("2_80wo7")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uw2if"]
atlas = ExtResource("2_80wo7")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lkrf"]
atlas = ExtResource("3_vumj4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_15uvn"]
atlas = ExtResource("3_vumj4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tb6cs"]
atlas = ExtResource("3_vumj4")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rc2wq"]
atlas = ExtResource("3_vumj4")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_c18be"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2vm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iadg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqg3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ari52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vx20w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xkxh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ey1ld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uw2if")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lkrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15uvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tb6cs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rc2wq")
}],
"loop": false,
"name": &"Save",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8bpds"]
size = Vector2(30, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xp0kk"]
size = Vector2(30, 31)

[node name="SavePoint" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 16
collision_mask = 0
script = ExtResource("1_5hgds")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_c18be")
animation = &"Save"
frame = 3
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_8bpds")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
texture_filter = 1
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_xp0kk")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_80wo7")
volume_db = 20.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
